[tool.poetry]
name = "sber_test"
version = "0.1.0"
description = ""
authors = ["Gigerin <codenamedelta228@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
WTForms = "^3.1.2"
black = "^24.8.0"
pylint = "^3.2.6"
pytest = "^8.3.2"
waitress = "^3.0.0"
python-dateutil = "^2.9.0"
pytest-cov = "^5.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source =[".", "app", "forms", "util"]


[tool.coverage.report]
include_namespace_packages = true
omit = ["__init.py", "*/tests/*", "*/migrations/*"]

[tool.pylint.master]
init-hook='import sys; sys.path.append(".")'

